tests/vrml97/good/def-use-in-proto-default-value.wrl
#VRML V2.0 utf8
PROTO Node [
  field MFNode val [ Group { children [ DEF G Group {} ] },
                     Group { children [ USE G ] } ]
] {
  Group {}
}
Node {}
