tests/vrml97/bad/route-from-field.wrl
#VRML V2.0 utf8
PROTO FromNode [ field SFBool val TRUE ] { Group {} }
PROTO ToNode [ eventIn SFBool set_val ] { Group {} }
DEF FROM-NODE FromNode {}
DEF TO-NODE ToNode {}
ROUTE FROM-NODE.val TO TO-NODE.val
